feat(productService): configure and send Email